@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ V 2.03.02</title>
+<title>Flexc++ V 2.03.03</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Flexc++ V 2.03.02</h1>
+<h1>Flexc++ V 2.03.03</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>2008-2015</h2>
@@ -33,7 +33,9 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.01">2.03.02</a>
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.03">2.03.02</a>
+Oct  6, 2015;
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.02">2.03.02</a>
 Oct  2, 2015;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.01">2.03.01</a>
 Sep 28, 2015;
@@ -42,9 +44,7 @@ Aug 28, 2015;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.02.00">2.02.00</a>
 Aug 23, 2015 (originally this tag was named 4.02.00 on Mar 13, 2015, which
 probably was a typo. Tag 4.02.00 was removed, and 2.02.00 was installed
-instead); 
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.01.00">2.01.00</a>
-Mar 16, 2014.
+instead).
         </ul>
     
 <p>
