@@ -37,7 +37,10 @@ release page):
 
         itemization(
         it() url(2.03.02)
-                (https://github.com/fbb-git/_project_/releases/tag/2.03.01)
+                (https://github.com/fbb-git/_project_/releases/tag/2.03.03)
+Oct  6, 2015;
+        it() url(2.03.02)
+                (https://github.com/fbb-git/_project_/releases/tag/2.03.02)
 Oct  2, 2015;
         it() url(2.03.01)
                 (https://github.com/fbb-git/_project_/releases/tag/2.03.01)
@@ -49,10 +52,7 @@ Aug 28, 2015;
                 (https://github.com/fbb-git/_project_/releases/tag/2.02.00)
 Aug 23, 2015 (originally this tag was named 4.02.00 on Mar 13, 2015, which
 probably was a typo. Tag 4.02.00 was removed, and 2.02.00 was installed
-instead); 
-        it() url(2.01.00)
-                (https://github.com/fbb-git/_project_/releases/tag/2.01.00)
-Mar 16, 2014.
+instead).
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
