@@ -1,3 +1,14 @@
+flexc++ (2.03.03)
+
+  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
+    than 'cd'. Fixed in this release.
+
+  * Kevin Brodsky also observed that the combined size of all precompiled 
+    headers might exceed some disks capacities. The option -P was added to the
+    ./build script to prevent the use of precompiled headers.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:24:26 +0200
+
 flexc++ (2.03.02)
 
   * Reimplemented the (un)installation procedures
